--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+talus-tally (0.1.3-1) jammy; urgency=medium
+
+  * Bump release metadata to 0.1.3 for the new desktop installers
+  * Align Linux packaging flow so backend resources exist before bundling
+
+ -- Talus Tally Dev <dev@talusstally.local>  Thu, 26 Feb 2026 00:00:00 +0000
+
 talus-tally (0.1.1-1) jammy; urgency=medium
 
   * Alpha 0.1.1 desktop bundle
